[tool.poetry]
name = "twitter_untrack"
version = "0.1.0"
description = "Telegram bot that removes the tracking query parameter 't' on Twitter urls."
authors = ["Martí Barri <martibarri@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
python-telegram-bot = "^20.0a2"
ptbcontrib = {git = "https://github.com/python-telegram-bot/ptbcontrib.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
